Improve vscode debugging setup.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,9 +25,9 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
             "args": [
-                "~/Documents/fonts/Rival/*.otf"
+                "$HOME/Downloads/IvyStyle TW Bold.ttf"
             ]
         },
         {
